7424
And from the command line, building with sbt:


james@James-Moores-iMac:~/workspace/AndroidProguardScala$ sbt -sbt-snapshot compile
Detected sbt version 0.13.0-SNAPSHOT
Using /Users/james/.sbt/0.13.0-SNAPSHOT as sbt dir, -sbt-dir to override.
[info] Set current project to default-cb16a7 (in build file:/Users/james/workspace/AndroidProguardScala/)
[info] Compiling 3 Scala sources to /Users/james/workspace/AndroidProguardScala/target/scala-2.10/classes...
[info] 'compiler-interface' not yet compiled for Scala 2.10.0-20120515-164233-3e038d801c. Compiling...
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:7: error: object Interpreter is not a member of package scala.tools.nsc
import scala.tools.nsc.{GenericRunnerCommand, Interpreter, InterpreterLoop, ObjectRunner, Settings}
       ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:64: error: not found: type GenericRunnerCommand
		val command = new GenericRunnerCommand(args, message => log.error(Message(message)))
                                  ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:79: error: not found: type Settings
		implicit def compat(s: Settings): Compat = new Compat
                                       ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:27: error: not found: type InterpreterLoop
		val loop = new InterpreterLoop {
                               ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:33: error: not found: value in
					in = InteractiveReader.createDefault()
                                        ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:34: error: not found: value interpreter
					interpreter = new Interpreter(settings)
                                        ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:39: error: not found: value interpreter
					interpreter.setContextClassLoader()
                                        ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:42: error: value createInterpreter is not a member of AnyRef
					super.createInterpreter()
                                              ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:45: error: not found: value interpreter
					interpreter.beQuietDuring(interpreter.bind(id, value.asInstanceOf[AnyRef].getClass.getName, value))
                                        ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:48: error: not found: value interpreter
					interpreter.interpret(initialCommands)
                                        ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:53: error: not found: value interpreter
					interpreter.interpret(cleanupCommands)
                                        ^
/var/folders/PD/PDEkk4MQEdSN50C8cUujh++++TI/-Tmp-/sbt_81cafd6b/ConsoleInterface.scala:54: error: value closeInterpreter is not a member of AnyRef
				super.closeInterpreter()
                                      ^
12 errors found
[error] {file:/Users/james/workspace/AndroidProguardScala/}default-cb16a7/compile:compile: Error compiling sbt component 'compiler-interface'
[error] Total time: 6 s, completed May 16, 2012 9:21:50 AM
james@James-Moores-iMac:~/workspace/AndroidProguardScala$ 
